--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,18 +15,8 @@
         android:theme="@style/Theme.WhatNow"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-        <activity android:name=".SplashActivity"
         <activity
-            android:name=".api.SearchFragment"
-            android:exported="false" />
-        <activity
-            android:name=".SignInActivity"
-            android:exported="false" />
-        <activity
-            android:name=".SignupActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,8 +26,8 @@
         <activity android:name=".Onboarding" />
         <activity android:name=".SignInActivity" />
         <activity android:name=".SignupActivity" />
-        <activity android:name=".MainActivity"/>
         <activity android:name=".api.SettingAPI" />
+        <activity android:name=".MainActivity"/>
 
         <meta-data
             android:name="preloaded_fonts"
