--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,16 +16,16 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".UI.SettingsActivity"
+            android:name=".SettingsActivity"
             android:exported="false" />
         <activity
-            android:name=".API.SearchFragment"
+            android:name=".api.SearchFragment"
             android:exported="false" />
         <activity
-            android:name=".FirebaseAuth.SignInActivity"
+            android:name=".SignInActivity"
             android:exported="false" />
         <activity
-            android:name=".FirebaseAuth.SignupActivity"
+            android:name=".SignupActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
@@ -36,7 +36,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".API.SettingAPI" />
+        <activity android:name=".api.SettingAPI" />
 
         <meta-data
             android:name="preloaded_fonts"
