--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".ui.SplashActivity"
+            android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,11 +24,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.Onboarding" />
-        <activity android:name=".firebase_auth.SignInActivity" />
-        <activity android:name=".firebase_auth.SignupActivity" />
-        <activity android:name=".api.SettingAPI" />
-        <activity android:name=".main.MainActivity"/>
+        <activity android:name=".Onboarding" />
+        <activity android:name=".SignInActivity" />
+        <activity android:name=".SignupActivity" />
+        <activity android:name=".SettingAPI" />
+        <activity android:name=".MainActivity"/>
 
         <meta-data
             android:name="preloaded_fonts"
